--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,5 +1,63 @@
 /* header */
 body{
+	margin:0;
+}
+.container{
 	width:$max-width;
 	margin:auto;
+}
+.btn-container{
+	@include clearfix();
+	.button{
+		float:left;
+		border-radius:4px;
+		padding:8px;
+		margin:8px 8px 8px 0px;
+		color:$white;
+		cursor:pointer;
+		transition:.5s background-color;
+		&:hover{
+			&.bg-blue{
+				background-color: $navy;
+			}
+			&.bg-green{
+				background-color: $olive;
+			}
+			&.bg-orange{
+				background-color: $red;
+			}
+		}
+	}
+}
+.grid{
+	display: inline-block;
+	padding-top:1px;
+	padding-left: 1px;
+	.line{
+		@include clearfix();
+		.item{
+			width:12px;
+			height:12px;
+			margin-right:1px;
+			margin-bottom:1px;
+			padding:5px;
+			cursor:pointer;
+			background-color:$gray;
+			float:left;
+			text-align: center;
+			font-size: 12px;
+			line-height: 12px;
+			border:outset 2px $silver;
+			font-weight: 700;
+			&.open{
+				border:solid 1px $silver;
+				padding:6px;
+				background-color: $white;
+				&.bomb{
+					background-color: $red;
+					color: $white;
+				}
+			}
+		}
+	}
 }
