--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -1,15 +1,11 @@
 ---
-nav:
-  - {name: "home", label: "Home", href: ""}
-  - {name: "work", label: "Work", href: "work/"}
-  - {name: "aboutus", label: "About Us", "About Us", href: "aboutus/"}
-  - {name: "contact", label: "Contact", "Contact", href: "contact/"}
 ---
 <!DOCTYPE html>
 <html class="no-js">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <title>{{ site.title }} - {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="{{ page.rootPath }}assets/css/style.min.css">
@@ -19,10 +15,13 @@ nav:
     <![endif]-->
   </head>
   <body>
+    <div class="container">
     <h1>{{ page.title }}</h1>
-    {% include header.html nav=page.nav%}
+      {% include header.html nav=page.nav%}
 
-    {{content}}
+      {{content}}
+    </div>
   </body>
-  <script type="text/javascript" src="{{ page.rootPath }}assets/js/thegoodrush.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="{{ page.rootPath }}assets/js/script.js"></script>
 </html>
