--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
-    <title>{{ site.title }} - {{ page.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="{{ page.rootPath }}assets/css/style.min.css">
+    <link rel="stylesheet" href="{{ page.rootPath }}assets/css/style.css">
 
     <!--[if lte IE 8]>
     <script type="text/javascript" src="{{ page.rootPath }}vendors/html5shiv/html5shiv.js"></script>
